# ceph

./: ceph.spec.in  do_cmake.sh  do_freebsd.sh  foramt.sh  install-deps.sh  make-debs.sh  make-dist  make-srpm.sh  mingw_conf.sh  run-make-check.sh  win32_build.sh  win32_deps_build.sh
admin/: build-doc  serve-doc
ceph-menv/: build_links.sh  mdo.sh  mset.sh
container/: Containerfile  build.sh
debian/: ceph-base.postinst  ceph-base.prerm  ceph-common.postinst  ceph-common.postrm  ceph-mds.postinst  ceph-mds.prerm  ceph-mgr-cephadm.postinst  ceph-mgr-dashboard.postinst  ceph-mgr-diskprediction-local.postinst  ceph-mgr-modules-core.install  ceph-mgr.postinst  ceph-mgr.prerm  ceph-mon.prerm  ceph-osd.prerm  cephadm.postinst  cephadm.postrm  radosgw.postinst  radosgw.prerm
fusetrace/: fusetrace_ll.cc
mirroring/: mirror-ceph.sh  test-mirrors.sh
qa/: loopall.sh  run-standalone.sh  run_xfstests-obsolete.sh  run_xfstests.sh  run_xfstests_qemu.sh  runallonce.sh  setup-chroot.sh
src/: SimpleRADOSStriper.cc  SimpleRADOSStriper.h  btrfs_ioc_test.c  ceph-osd-prestart.sh  ceph_common.sh  ceph_fuse.cc  ceph_mds.cc  ceph_mgr.cc  ceph_mon.cc  ceph_osd.cc  (+18 more)
src/pybind/mgr/: CMakeLists.txt  mgr_module.py  mgr_util.py
src/pybind/mgr/cephfs_profiler/: cli.py  collector.py  module.py  persistence.py  portrait.py  types.py
src/pybind/mgr/cephfs_profiler/tests/: test_collector.py  test_persistence.py  test_portrait.py
src/pybind/mgr/dashboard/: run-backend-api-request.sh  run-backend-rook-api-request.sh  run-frontend-e2e-tests.sh  run-frontend-unittests.sh
src/pybind/mgr/dashboard/ci/cephadm/: run-cephadm-e2e-tests.sh  start-cluster.sh
src/pybind/mgr/prometheus/: module.py
src/pybind/mgr/rook/: generate_rook_ceph_client.sh
src/pybind/mgr/rook/ci/scripts/: bootstrap-rook-cluster.sh
src/pybind/mgr/stats/: module.py
src/pybind/mgr/stats/fs/: hotspot_dirs.py
(+4374 files in other folders)
